Add the title screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">HopSkip</string>
     <string name="start">Start Game</string>
     <string name="player">Player</string>
+    <string name="title_screen">title_screen</string>
 </resources>
