Add player death, score tracking, core fonts, and results screen, remove use of Android "back" button during game.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="start">Start Game</string>
     <string name="player">Player</string>
     <string name="title_screen">title_screen</string>
+    <string name="distance_score">distance_score</string>
+    <string name="results_screen"/>
+    <string name="results_player"/>
 </resources>
