Very basic shop implementation, add playable Bunny character with corresponding coin variant.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="distance_score">distance_score</string>
     <string name="results_screen"/>
     <string name="results_player"/>
+    <string name="shop">Shop</string>
 </resources>
