--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="results_screen"/>
     <string name="results_player"/>
     <string name="shop">Shop</string>
+    <string name="settings">Settings</string>
 </resources>
